Synch with Henry's latest edits plus references

--- a/B8Paper/10-Introduction.tex
+++ b/B8Paper/10-Introduction.tex
@@ -7,7 +7,7 @@ partners~\cite{PDG_mass}.  These two properties motivate the
 possibility that these neutrinos are `Majorana' rather than `Dirac'
 particles, i.e. different from their respective charged partner
 leptons by being their own
-anti-particle~\cite{majorana,pdg_vogel_piepke}. In 1939 W. Furry
+anti-particle~\cite{Majorana1937,pdg_vogel_piepke}. In 1939 W. Furry
 pointed out that a Majorana nature of the electron neutrino would
 allow neutrinoless double-beta decay, in which a nucleus undergoes a
 second order $\beta$-decay without producing any neutrinos,
