--- a/B8Paper/20-LiquidScintillatorDetector.tex
+++ b/B8Paper/20-LiquidScintillatorDetector.tex
@@ -59,7 +59,7 @@ PMT~\cite{Hamamatsu_R7081}, see also Ref.~\cite{dctwo}). We note that
 the KamLAND 17-inch PMTs use the same photocathode type with similar
 quantum efficiency; photocathodes with higher efficiencies are now
 starting to become better understood theoretically and may become
-commercially available~\cite{Photonis, Smedley, Luca}.  In order to
+commercially available~\cite{Photonis, Smedley, Cultrera}.  In order to
 neglect the effect of the transit-time-spread (TTS) of the
 photodetectors, we use a TTS of 0.1~ns ($\sigma$), which can be
 achieved with large area picosecond photodetectors
