--- a/B8Paper/50-Conclusions.tex
+++ b/B8Paper/50-Conclusions.tex
@@ -1,15 +1,21 @@
 \section{Conclusions}
-A technique based on spherical harmonics analysis can
-separate 0{\nbb} decay from $^{8}$B solar neutrino interactions. The
-separation is based on the distinct event topologies of signal and
-background. This event topology information is available in addition
-to the measurements of the energy deposited in the detector. This
-technique may be further developed and adopted by future large scale
-liquid scintillator detectors to suppress background coming from
-$^{8}$B solar neutrino interactions in the detector volume. The
-performance of the technique is mostly affected by chromatic
-dispersion, vertex reconstruction and the time profile of the emission of scintillation light. We show that a liquid scintillator detector
-with a scintillation rise time constant $\tau_r=$5~ns provide sufficient cherenkov-scintillation light separation and potentially allows
-for use of the spherical harmonics analysis
-as an extra handle to extract 0{\nbb} decay signal.
+\label{sec:conclusions}
+We consider the use of large-area photodetectors with good time and
+space resolution in kiloton scale liquid scintillator detectors to
+suppress background coming from $^{8}$B solar neutrino
+interactions. Using a default model detector with parameters derived
+from present practice we show that a sample of detected photons
+enriched in Cherenkov light by a cut on time-of-arrival contains
+directional information can be used to separate 0{\nbb}~ decay from
+$^{8}$B solar neutrino interactions. The separation is based on a
+spherical harmonics analysis of the event topologies of the
+two electrons in signal events and the single electron in the
+background. The performance of the technique is constrained by
+chromatic dispersion, vertex reconstruction, and the time profile of
+the emission of scintillation light. The development of a scintillator
+with a rise time constant of at least 5~ns would allow a
+Cherenkov-scintillation light separation with a background rejection
+factor for \B~ solar neutrinos of xx and an efficiency for 0\nbb~ signal
+of xx\%.
+
 
