--- a/B8Paper/acknowledgements.tex
+++ b/B8Paper/acknowledgements.tex
@@ -1,15 +1,22 @@
-This work was supported by DOE grant number A, and NSF grant number B.
+The activities at the University of Chicago  were supported by the
+Department of Energy under DE-SC-0008172, the
+National Science Foundation under grant PHY-1066014, and the Driskill
+Foundation, and at MIT by  the
+National Science Foundation under grant 1554875.
 
-We thank Gabriel Orebi Gann of University of California, Berkeley for discussion on expected backgrounds at 
-SNO+ experiment. We thank Jenni Kotilla of Yale for discussions on electron angular correlations in 0\nbb-decay 
-and for providing data with phase factors for generating 0\nbb- and 2\nbb-decay events.
-We are greateful to Christoph Aberle, formely at UCLA, for initial development of Geant-4 
-detector model used at this paper and early contribution to the development of Cherekov/scintillation
-light separation technique. We thank Matthew Wetstein of the Iowa State University for help with vertex reconsruction
-algoroithms and productive discussion on Cherenkov/scintillation light separation. We thank Eric Spieglan of the 
-University of Chicago for productive discussions on spherical harmonics
-analysis. We also thank Evan Angelico of the University of Chicago for estimating effects of photo-detector position and
-time resolution on the vertex reconstruction and verifying effects of chromatic dispersions.
-We thank Jan Flusser of Institute of Information Theory and Automation, Czech Academy of Sciences for
-helpfull discussions on image processing using moment invariants. Last but not least we thank Mingfang Yeh of 
-Brookhaven National Laboratory for discussions of timing properties of various liquid scintillators.
+We thank G. Orebi Gann of UC for a discussion on expected backgrounds
+at the SNO+ experiment, and J.  Kotilla for discussions on electron
+angular correlations in 0\nbb-decay and for providing data with phase
+factors for generating 0\nbb- and 2\nbb-decay events.  We are grateful
+to C. Aberle for initial development of the Geant-4
+detector model used in this paper and for contributions to the
+development of the Cherenkov/scintillation light separation technique, and
+to M.  Wetstein for help with vertex reconstruction algorithms and
+productive discussions on Cherenkov/scintillation light separation. We
+thank E. Spieglan for productive discussions on spherical harmonics
+analysis and E. Angelico for estimating the effects of photo-detector
+position and time resolution on the vertex reconstruction and
+verifying the effects of chromatic dispersion.  We thank J. Flusser
+for helpful discussions on image processing using moment
+invariants. Last but not least we thank M. Yeh for discussions of the
+timing properties of liquid scintillators.
