--- a/B8Paper/bibliography.bib
+++ b/B8Paper/bibliography.bib
@@ -1,3 +1,28 @@
+@article{PDG_mass,
+      author         = "Olive, K. A. and others",
+      title          = "{Review of Particle Physics}",
+      collaboration  = "Particle Data Group",
+      journal        = "Chin. Phys.",
+      volume         = "C38",
+      year           = "2014",
+      pages          = "090001",
+      doi            = "10.1088/1674-1137/38/9/090001",
+      SLACcitation   = "%%CITATION = CHPHD,C38,090001;%%"
+}
+
+
+@article{pdg_vogel_piepke,
+      author         = "Olive, K. A. and others",
+      title          = "{Review of Particle Physics}",
+      collaboration  = "Particle Data Group",
+      journal        = "Chin. Phys.",
+      volume         = "C38",
+      year           = "2014",
+      pages          = "090001",
+      doi            = "10.1088/1674-1137/38/9/090001",
+      SLACcitation   = "%%CITATION = CHPHD,C38,090001;%%"
+}
+
 @Phdthesis{ChristophThesis,
 author = "Aberle, Christopher",
 title = "{Optimization, simulation and analysis of the scintillation signals in the Double Chooz experiment}",
@@ -5,13 +30,14 @@ year = "2011",
 school = "University of Heidelberg"
 }
 
+
 @article{SNOp-B8-bkg,
       author         = "Maio, A.",
       title          = "{Search for Majorana neutrinos with the SNO+ detector at
                         SNOLAB}",
       booktitle      = "{Proceedings of 16th International Conference on
                         Calorimetry in High Energy Physics (CALOR 2014)}",
-      collaboration  = "SNO+",
+      collaboration  = "SNO",
       journal        = "J. Phys. Conf. Ser.",
       volume         = "587",
       year           = "2015",
@@ -20,6 +46,35 @@ school = "University of Heidelberg"
       doi            = "10.1088/1742-6596/587/1/012030",
       SLACcitation   = "%%CITATION = 00462,587,012030;%%"
 }
+
+@misc{further_cuts,
+year="{}",
+note="Being able to distinguish between two-tracks and single-track events
+using the spherical analysis can allow further cuts to be made.  For
+example, one might use absolute directional information to suppress
+single track events where the direction of the track is consistent
+with the location of a known background such as the sun. Once a single
+track topology is established, one can use a centroid method (see
+Ref.~\cite{Aberle2014}) to reconstruct directionality of the track
+(or two degenerate tracks) in order to suppress events that are
+aligned with the direction of \B~solar neutrinos."
+}
+
+@Book{goldberger_watson,
+author = "{M.L. Goldberger and K. M. Watson}",
+title = "{Collision Theory}",
+year = "{1964}",
+publisher = "{Wiley, New York}",
+}
+
+@Misc{legendre_polynomials,
+title = "Legendre polynomials are calculated using the GNU Scientific Library",
+year = "{2014}",
+url = {http://www.gnu.org/software/gsl/},
+note = "version 1.9"
+}
+
+\begin{comment}
 
 @article{GERDA2013,
       author         = "Agostini, M. and others",
@@ -650,7 +705,7 @@ publisher = "{Pergamon Press}"
 %
 %HERE ARE LINDLEY's ADDITIONS.
 %
-@article{phasespace,
+@article{Jenni,
   title = {Phase-space factors for double-$\beta$ decay},
   author = {Kotila, J. and Iachello, F.},
   journal = {Phys. Rev. C},
@@ -689,6 +744,22 @@ author = "V.I. Tretyak and Yu.G. Zdesenko"
       SLACcitation   = "%%CITATION = 00462,136,042054;%%",
 }
 
+
+@article{Minfang_slow_rise_time,
+      author         = "Li, Mohan and Guo, Ziyi and Yeh, Minfang and Wang, Zhe
+                        and Chen, Shaomin",
+      title          = "{Separation of Scintillation and Cherenkov Lights in
+                        Linear Alkyl Benzene}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A830",
+      year           = "2016",
+      pages          = "303-308",
+      doi            = "10.1016/j.nima.2016.05.132",
+      eprint         = "1511.09339",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      SLACcitation   = "%%CITATION = ARXIV:1511.09339;%%"
+}
 
 @article{biller,
       author         = "Biller, Steven D",
@@ -770,7 +841,7 @@ author = "V.I. Tretyak and Yu.G. Zdesenko"
 
 
 @article{anode_paper,
-title = "\{RF\} strip-line anodes for Psec large-area MCP-based photodetectors ",
+title = "{ RF strip-line anodes for Psec large-area MCP-based photodetectors }",
 journal = "Nucl.Instrum.Meth.",
 volume = "A 711",
 pages = "124 - 131",
@@ -895,6 +966,40 @@ year={2013},
 note="{http://www.hamamatsu.com/resources/pdf/etd/R3809U-61-63-64\_TPMH1295E04.pdf}"
 }
 
+
+@article{Photonis,
+      author         = "Orlov, Dmitry A. and DeFazio, Jeff and Duarte Pinto,
+                        Serge and Glazenborg, Rene and Kernen, Emilie",
+      title          = "{High quantum efficiency S-20 photocathodes in photon
+                        counting detectors}",
+      booktitle      = "{Proceedings, Workshop on Fast Cherenkov Detectors:
+                        Photon detection, DIRC design and DAQ (DIRC2015): Giessen,
+                        Germany, November 11-13, 2015}",
+      journal        = "JINST",
+      volume         = "11",
+      year           = "2016",
+      number         = "04",
+      pages          = "C04015",
+      doi            = "10.1088/1748-0221/11/04/C04015",
+      eprint         = "1603.04493",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      SLACcitation   = "%%CITATION = ARXIV:1603.04493;%%"
+}
+
+
+@misc{Smedley,
+author="J. Smedley, BNL",
+howpublished="private communication",
+year="2016"
+}
+
+@misc{Cultrera,
+author="L. Cultrera, Cornell",
+howpublished="private communication",
+year="2016"
+}
+
 %
 %John
 %
@@ -990,7 +1095,7 @@ note="{http://www.hamamatsu.com/resources/pdf/etd/R3809U-61-63-64\_TPMH1295E04.p
 }
 
 @article{NEMO3,
-     title = "Technical design and performance of the \{NEMO\} 3 detector ",
+     title = "Technical design and performance of the NEMO 3 detector ",
      journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
      volume = "536",
      number = "1–2",
@@ -1274,3 +1379,5 @@ year = {1979}
   OPTdoi = {10.1103/PhysRevLett.89.011301},
   OPTurl = {http://link.aps.org/doi/10.1103/PhysRevLett.89.011301}
 }
+
+\end{comment}
